Bug #51155 (Unreasonable non-emalloc allocations of memory)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@304031 c90b9560-bf6c-de11-be94-00142212c4b1